--- a/.github/workflows/sync-readme.yml
+++ b/.github/workflows/sync-readme.yml
@@ -1,13 +1,6 @@
 name: Sync README
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - develop
-    paths:
-      - .github/workflows/sync-readme.yml
-      - README.md
+on: [workflow_dispatch]
 
 jobs:
   modrinth-desc:
