--- a/.github/workflows/deploy-discord-bot.yml
+++ b/.github/workflows/deploy-discord-bot.yml
@@ -1,10 +1,5 @@
 name: Deploy Discord Bot
-on:
-  push:
-    branches:
-      - develop
-    paths:
-      - "discord_bot/**"
+on: [workflow_dispatch]
 
 jobs:
   deploy:
