更新 build-extension.yml

--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.extension }}.jar
-          path: adapters/${{ inputs.extension }}/build/libs/${{ inputs.extension }}.jar
+          path: extensions/${{ inputs.extension }}/build/libs/${{ inputs.extension }}.jar
